--- a/style.css
+++ b/style.css
@@ -72,3 +72,88 @@ header * {
     gap: 24px;
     align-items: center;
 }
+
+.main-article {
+    display: block;
+    width: 100%;
+}
+
+.main-article-content {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.main-article-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 12px;
+}
+
+.signup-button {
+    color: white;
+    background-color: #3882F6;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 6px 12px;
+}
+
+.main-article-right {
+    width: 400px;
+    height: 300px;
+    border: 1px solid black;
+    position:relative;
+    /* padding-top:50%; */
+    
+    
+}
+
+.main-article-img {
+    border: 1px solid black;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+}
+
+.article-second h2 {
+    text-align: center;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bolder;
+}
+
+.article-second .cards-container {
+    display: flex;
+    justify-content: space-between;
+    
+    flex-wrap: nowrap;
+    padding: 0 auto;
+    /* border: 2px solid red; */
+    width: 60%;
+    margin: 10px auto 20px auto;
+}
+
+.card {
+    /* border: 2px solid hotpink; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* flex-basis: 100px; */
+    
+}
+
+.card img {
+    width: 150px;
+    height: 150px;
+    border: 2px solid #3882F6;
+    border-radius: 5px;
+}
+
+.card p {
+    width: 150px;
+    font-size: 10px;
+}
