--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 * {
     box-sizing: border-box;
-    padding: inherit;
+    /* padding: inherit; */
     margin: inherit;
 }
 
@@ -183,3 +183,26 @@ header * {
     }
 }
 
+.signup-container {
+    display: flex;
+    align-items: center;
+    text-align: left;
+    color: white;
+    background-color: #3882F6;
+    width: 50%;
+    /* height: 200px; */
+    border-radius: 10px;
+    padding: 20px 5px;
+    margin: 40px auto;
+    & > * {
+        margin: 10px auto;
+    }
+}
+
+.signup-container-right button {
+    color: white;
+    padding: 5px 15px;
+    border: 1px solid white;
+    border-radius: 4px;
+    background: transparent;
+}
